All checkstyle and compile problems gone.
Still looking at some integration issue